[package]
authors = ["The Tremor Team"]
description = "Tremor Influx Parser"
edition = "2018"
license = "Apache-2.0"
name = "tremor-influx"
readme = "README.md"
version = "0.3.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

# Additional `RUSTFLAGS` to set (default: none)
rustc-args = ["-C target-cpu=native"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = "5.2.1"
value-trait = "0.2"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.7"
simd-json = "0.4"
snmalloc-rs = "0.2"

[[bench]]
harness = false
name = "decoder"
