[package]
authors = ["The Tremor Team"]
description = "Tremor Influx Parser"
edition = "2021"
license = "Apache-2.0"
name = "tremor-influx"
readme = "README.md"
repository = "https://github.com/tremor-rs/tremor-runtime"
version = "0.13.0-rc.15"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

# Additional `RUSTFLAGS` to set (default: none)
rustc-args = ["-C target-feature=+avx,+avx2,+sse4.2"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = "6.1.1"
value-trait = "0.6"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
simd-json = "0.12"
snmalloc-rs = "0.3"

[[bench]]
harness = false
name = "decoder"
