[package]
name = "tremor-interceptor"
edition = "2021"
authors = ["The Tremor Team"]
description = "Tremor Preprocessors, Postprocessors, and maybe soon: Interceptors"
documentation = "https://docs.tremor.rs"
homepage = "https://www.tremor.rs"
license = "Apache-2.0"
repository = "https://github.com/tremor-rs/tremor-runtime"
version = "0.13.0-rc.22"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tremor-value = { path = "../tremor-value", version = "0.13.0-rc.22" }
tremor-config = { path = "../tremor-config", version = "0.13.0-rc.22" }
tremor-common = { path = "../tremor-common", version = "0.13.0-rc.22" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
byteorder = "1"
value-trait = "0.8"
rand = "0.8"
bytes = "1.5.0"
memchr = "2.6"
anyhow = { version = "1.0", default-features = true }
thiserror = { version = "1.0", default-features = false }

# Compression
brotli = { version = "5", default-features = false, features = ["std"] }
xz2 = "0.1"
lz4 = "1"
snap = "1"
zstd = "0.13"
libflate = "2"

[dev-dependencies]
proptest = "1.4"
