[package]
authors = ["The Tremor Team"]
description = "Tremor Pipeline DAG Runtime"
edition = "2021"
license = "Apache-2.0"
name = "tremor-pipeline"
version = "0.13.0-rc.3"

[dependencies]
async-broadcast = "0.4"
async-std = { version = "1.12.0", features = ["attributes"] }
beef = { version = "0.5", features = ["impl_serde"] }
either = { version = "1.8", features = ["serde"] }
error-chain = "0.12"
halfbrown = "0.1"
indexmap = { version = "1", features = ["serde-1"] }
rand = { version = "0.8", features = ["small_rng"] }
lazy_static = "1"
log = "0.4"
lru = "0.8"
petgraph = "0.6"
regex = "1"
rust-bert = { version = "0.18.0", optional = true }
serde = "1"
serde_derive = "1"
serde_yaml = "0.9"
simd-json = { version = "0.6", features = ["known-key"] }
simd-json-derive = "0.4"
sled = "0.34"
tremor-common = { version = "0.13.0-rc.3", path = "../tremor-common" }
tremor-script = { version = "0.13.0-rc.3", path = "../tremor-script" }
tremor-value = { version = "0.13.0-rc.3", path = "../tremor-value" }
url = "2.3.1"
value-trait = "0.4"
window = { git = "https://github.com/tremor-rs/window.git", tag = "v0.1.1" }

[dev-dependencies]
base64 = "0.13"
criterion = "0.4"
tempfile = "3.2"
xz2 = "0.1"

[features]
bert = ["rust-bert"]
