[package]
authors = ["The Tremor Team"]
description = "Tremor Pipeline DAG Runtime"
edition = "2021"
license = "Apache-2.0"
name = "tremor-pipeline"
version = "0.13.0-rc.15"

[dependencies]
tokio = "1"
beef = { version = "0.5", features = ["impl_serde"] }
either = { version = "1.9", features = ["serde"] }
error-chain = "0.12"
halfbrown = "0.2"
indexmap = "2"
rand = { version = "0.8", features = ["small_rng"] }
lazy_static = "1"
log = "0.4"
lru = "0.11"
petgraph = "0.6"
regex = "1"
rust-bert = { version = "0.21.0", optional = true }
serde = "1"
serde_yaml = "0.9"
simd-json = { version = "0.10", features = ["known-key"] }
simd-json-derive = "0.10"
sled = "0.34"
tremor-common = { version = "0.13.0-rc.15", path = "../tremor-common" }
tremor-script = { version = "0.13.0-rc.15", path = "../tremor-script" }
tremor-value = { version = "0.13.0-rc.15", path = "../tremor-value" }
url = "2"
value-trait = "0.6"
window = { git = "https://github.com/tremor-rs/window.git", tag = "v0.1.1" }

[dev-dependencies]
base64 = "0.21"
criterion = "0.5"
tempfile = "3.8"
xz2 = "0.1"
tokio = { version = "1.32", features = ["full"] }

[features]
bert = ["rust-bert"]
