[package]
name = "tremor-query"
version = "0.7.0"
description = "Tremor Query CLI"
authors = ["The Tremor Team"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "tremor-query"
path = "src/main.rs"
test = false

[dependencies]
clap = "2.33.0"
halfbrown = "0.1"
serde_json = "1"
simd-json = {version = "0.2", features = ["known-key"]}
chrono = "0.4"
tremor-pipeline = { path = "../tremor-pipeline" }
tremor-script = { path = "../tremor-script" }
