[package]
name = "tremor-query"
version = "0.8.0"
description = "Tremor Query CLI"
authors = ["The Tremor Team"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "tremor-query"
path = "src/main.rs"
test = false

[dependencies]
clap = "2.33.3"
halfbrown = "0.1"
simd-json = {version = "0.3", features = ["known-key"]}
chrono = "0.4"
tremor-pipeline = { path = "../tremor-pipeline" }
tremor-script = { path = "../tremor-script" }
tremor-influx = { path = "../tremor-influx" }
