[package]
authors = ["The Tremor Team"]
build = "build.rs"
description = "Tremor Script Interpreter"
documentation = "https://docs.rs/tremor-script"
edition = "2018"
license = "Apache-2.0"
name = "tremor-script"
readme = "README.md"
version = "0.10.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

# Additional `RUSTFLAGS` to set (default: none)
rustc-args = ["-C target-cpu=native"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "tremor_script"

[dependencies]
atty = "0.2"
base64 = "0.13"
beef = {version = "0.5", features = ["impl_serde"]}
byteorder = "1.4"
chrono = "0.4"
cidr-utils = "0.5"
codespan = "0.11"
dissect = "0.1"
distance = "0.4"
downcast-rs = "1.2"
error-chain = "0.12"
fxhash = "0.2"
glob = "0.3"
grok = "1"
halfbrown = "0.1"
hdrhistogram = "7"
hostname = "0.3"
jumphash = "0.1"
lalrpop-util = "0.19"
matches = "0.1.8"
percent-encoding = "2.1"
rand = {version = "0.8", features = ["small_rng"]}
regex = "1"
rental = "0.5"
serde = "1.0"
serde_derive = "1.0"
simd-json = {version = "0.3", features = ["known-key"]}
simd-json-derive = "0.1"
sketches-ddsketch = "0.1.2"
strip-ansi-escapes = "0.1"
termcolor = "1.1"
tremor-common = {version = "0.9", path = "../tremor-common"}# FIXME tremor-influx v0.2"
tremor-influx = {version = "0.2", path = "../tremor-influx"}# FIXME tremor-influx v0.2
tremor-kv = "0.1"
tremor-value = {version = "0.1", path = "../tremor-value"}# FIXME tremor-influx v0.2
unicode-xid = "0.2"
url = "2"
value-trait = "0.1"
xz2 = "0.1"

[build-dependencies]
lalrpop = "0.19"

[dev-dependencies]
criterion = "0.3"
float-cmp = "0.8"
matches = "0.1"
pretty_assertions = "0.6.1"
proptest = "0.10"
tempfile = "3"

[features]
fns = []
