[package]
authors = ["The Tremor Team"]
build = "build.rs"
description = "Tremor Script Interpreter"
documentation = "https://docs.rs/tremor-script"
edition = "2021"
license = "Apache-2.0"
name = "tremor-script"
readme = "README.md"
repository = "https://github.com/tremor-rs/tremor-runtime"
version = "0.13.0-rc.6"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

# Additional `RUSTFLAGS` to set (default: none)
rustc-args = ["-C target-feature=+avx,+avx2,+sse4.2"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "tremor_script"

[dependencies]
atty = "0.2"
base64 = "0.13"
beef = { version = "0.5", features = ["impl_serde"] }
byteorder = "1.4"
chrono = "0.4"
cidr-utils = "0.5"
codespan = "0.11"
dissect = "0.4"
distance = "0.4"
downcast-rs = "1.2"
error-chain = "0.12"
fxhash = "0.2"
glob = "0.3"
grok = "2"
sha2 = "0.10"
halfbrown = "0.1"
hdrhistogram = "7"
hostname = "0.3"
jumphash = "0.1"
lalrpop-util = "0.19"
lazy_static = "1.4"
matches = "0.1.9"
percent-encoding = "2.1"
rand = { version = "0.8", features = ["small_rng"] }
regex = "1"
serde = "1.0"
serde_derive = "1.0"
simd-json = { version = "0.6", features = ["known-key"] }
simd-json-derive = "0.4"
sketches-ddsketch = "0.2.0"
strip-ansi-escapes = "0.1"
termcolor = "1.1"
tremor-common = { version = "0.13.0-rc.6", path = "../tremor-common" }
tremor-influx = { version = "0.13.0-rc.6", path = "../tremor-influx" }
tremor-kv = "0.4.0"
tremor-value = { version = "0.13.0-rc.6", path = "../tremor-value" }
unicode-xid = "0.2"
url = "2"
value-trait = "0.4"
xz2 = "0.1"

[build-dependencies]
lalrpop = "0.19"

[dev-dependencies]
criterion = "0.4"
float-cmp = "0.9"
matches = "0.1"
pretty_assertions = "1.3.0"
proptest = "1.0"
tempfile = "3"

[features]
# this is required for the erlang EQC tests of the language
erlang-float-testing = []
# This is required for the language server to prevent unbounded growth of the area
arena-delete = []
# This is required for the language server as w3e want to allow the use of it without platfor specific flags
allow-non-simd = ["simd-json/allow-non-simd"]
