[package]
name = "tremor-system"
version = "0.13.0-rc.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tremor-common = { path = "../tremor-common" }
tremor-script = { path = "../tremor-script" }

tokio = { version = "1.34", default-features = false }
anyhow = { version = "1.0", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
simd-json-derive = { version = "0.13", default-features = false }
simd-json = { version = "0.13", default-features = false }
either = { version = "1.6", default-features = false }

[dev-dependencies]
tremor-value = { path = "../tremor-value" }
