[package]
name = "tremor-system"
version = "0.13.0-rc.32"
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.tremor.rs"
authors = ["The Tremor Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tremor-common = { path = "../tremor-common", version = "0.13.0-rc.32" }
tremor-script = { path = "../tremor-script", version = "0.13.0-rc.32" }

tokio = { version = "1.39", default-features = false }
anyhow = { version = "1.0", default-features = true }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
simd-json-derive = { version = "0.13", default-features = false }
simd-json = { version = "0.13", default-features = false }
either = { version = "1.13", default-features = false }

[dev-dependencies]
tremor-value = { path = "../tremor-value", version = "0.13.0-rc.32" }
