[package]
name = "tremor-tool"
version = "0.7.3"
description = "Tremor CLI Tool"
authors = ["The Tremor Team"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
tremor-runtime = { path = "../" }
tremor-script = { path = "../tremor-script" }
tremor-pipeline = { path = "../tremor-pipeline" }
serde_derive = "1"
serde_json = "1"
simd-json = {version = "0.3", features = ["known-key"]}
serde_yaml = "0.8"
clap = { version = "2", features = ["yaml"] }
http = "0.2"
dirs = "2"
serde = "1"
halfbrown="0.1"
async-std = "1"
surf = "1"