[package]
authors = ["The Tremor Team"]
description = "Tremor Script Interpreter"
documentation = "https://docs.rs/tremor-script"
edition = "2021"
license = "Apache-2.0"
name = "tremor-value"
readme = "README.md"
repository = "https://github.com/tremor-rs/tremor-runtime"
version = "0.13.0-rc.23"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
beef = "0.5"
halfbrown = "0.2"
serde = "1.0"
simd-json = "0.13"
simd-json-derive = "0.13"
value-trait = { version = "0.8", features = ["custom-types"] }
tremor-common = { version = "0.13.0-rc.23", path = "../tremor-common" }

[dev-dependencies]
float-cmp = "0.9"
getopts = "0.2"
proptest = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
128bit = []
