[package]
name = "metronome"
version = "0.1.0"
edition = "2018"

# This is required so that the library is compiled as a shared library. See:
#
# * https://doc.rust-lang.org/cargo/reference/cargo-targets.html#the-crate-type-field
# * https://doc.rust-lang.org/reference/linkage.html
[lib]
name = "metronome"
crate-type = ["cdylib"]

[dependencies]
tremor-runtime = { path = "../../..", version = "0.11.4" }
abi_stable = "0.10"
